--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
-spring:
-  security:
-    user:
-      name: user
-      password: 123456
+admin-username: admin
+admin-password: 123456
+
+management:
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
