--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ admin-password: 123456
 management:
   endpoint:
     health:
-      show-details: always
+      show-details: always # TODO: fix to auth
   endpoints:
     web:
       exposure:
