--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,17 @@
 admin-username: admin
 admin-password: 123456
 
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/my_fourm?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password: 123456
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
 management:
   endpoint:
     health:
@@ -9,3 +20,10 @@ management:
     web:
       exposure:
         include: "*"
+
+logging:
+  level:
+    root: info
+    com.weitheshinobi.forum: debug
+  file:
+    name: log/forum-log.log
