--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ admin-password: 123456
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/my_fourm?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/my_forum?useUnicode=true&characterEncoding=utf-8
     username: root
     password: 123456
   jpa:
