--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 management:
   endpoint:
     health:
-      show-details: always # TODO: fix to auth
+      show-details: when_authorized
   endpoints:
     web:
       exposure:
